fixed button spacing issue

--- a/src/client/css/restaurant_page.css
+++ b/src/client/css/restaurant_page.css
@@ -1,7 +1,7 @@
 .restaurant-image {
   padding: 10px;
   width: 230px;
-  height: 200px;
+  height: 175px;
   border-radius:20%;
   background-color: #235;
   float: left;
@@ -23,6 +23,7 @@
   border-radius: 25px;
   box-shadow: 10px 10px 5px #888888;
   color: white;
+  margin-bottom: 5%;
 }
 
 .edit-restaurant {
